[package]
name = "hosts"
version = "0.3.0"
authors = ["Hayden Hughes <hayden@vulpes.chickenkiller.com>"]
edition = "2018"
description = "hosts file parsing for rust"
license = "MIT License"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
